[tool.poetry]
name = "lod_hopper"
version = "0.1.0"
description = "Tool to assist loading LODs in Minecraft"
authors = ["Matthew Lee"]

[tool.poetry.dependencies]
python = "3.10.12"
evdev = "1.7.1"
exceptiongroup = "1.2.2"
iniconfig = "2.0.0"
keyboard = "0.13.5"
MouseInfo = "0.1.3"
numpy = "2.1.1"
packaging = "24.1"
pillow = "10.4.0"
pluggy = "1.5.0"
progress = "1.6"
PyAutoGUI = "0.9.54"
PyGetWindow = "0.0.9"
PyMsgBox = "1.0.9"
pynput = "1.7.7"
pyperclip = "1.9.0"
PyRect = "0.2.0"
PyScreeze = "1.0.1"
python-xlib = "0.33"
python3-xlib = "0.15"
pytweening = "1.2.0"
six = "1.16.0"
tomli = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"

[tool.poetry.scripts]
lod_hopper = "lod_hopper.lod_hopper:main"